# aran

./: .gitattributes  .gitignore  ARAN_IMPLEMENTATION_GUIDE.md  DESIGN_REVIEW_GAP_ANALYSIS.md  Jenkinsfile  README.md  SECURITY.md  android_jni_bridge.cpp  cordova_capacitor_rasp.java  docker-compose.kafka.yml  docker-compose.yml  flutter_rasp_plugin.dart  ios_objcpp_bridge.mm  legacy_framework_bridges.js  maven_repository_guide.md  nativescript_rasp.h  react_native_rasp_turbo.cpp  unity_rasp_bridge.cs  universal_rasp_core.cpp  xamarin_maui_rasp.cs
aran-android-sdk/: build.gradle.kts  local.properties  settings.gradle.kts  test_e2e_telemetry.sh
aran-android-sdk/aran-secure/src/main/cpp/: CMakeLists.txt  advanced_anti_frida.cpp  advanced_rasp_defense.cpp  anti_frida.cpp  aran-core.cpp  aran_crypto.cpp  aran_genesis.cpp  aran_genesis.h  aran_obfuscate.h  aran_pin_validator.cpp  aran_scorched_earth.cpp  enhanced_certificate_pinning.cpp  genesis_prod.h  obfuscator.py  rasp_core_engine.cpp  rasp_defense.cpp
aran-android-sdk/aran-secure/src/main/cpp/build-ollvm/arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
aran-android-sdk/aran-secure/src/main/cpp/build-ollvm/armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
aran-android-sdk/aran-secure/src/main/cpp/build-ollvm/x86/: CMakeCache.txt  Makefile  cmake_install.cmake
aran-android-sdk/aran-secure/src/main/cpp/build-ollvm/x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
aran-backend/: docker-compose.yml  ec_private.pem  ec_public.der  ec_public.pem  ec_public_b64.txt  pom.xml  rsa_private.pem  rsa_private_b64.txt  rsa_private_pkcs8.der
aran-dashboard/: angular.json  capacitor.config.ts  cypress.config.ts  ionic.config.json  package-lock.json  package.json
aran-ios-sdk/: BUILD_INSTRUCTIONS.md  INTEGRATION_COMPLETE.md  Package.swift  README.md  aran.xcconfig  build_framework.sh  build_simple.sh  build_xcframework.sh
aran-red-team/: README.md  requirements.txt  run_red_team.sh
aran-waap/: README.md  go.mod  main.go
aran-website/: index.html  nginx.conf
aran_android_aar/: README.md  build.gradle  build_aar.sh  google_maven_config.gradle  settings.gradle
cross-platform-plugins/: AAR_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_GUIDE_ANDROID.md  INTEGRATION_GUIDE_CAPACITOR.md  INTEGRATION_GUIDE_CORDOVA.md  INTEGRATION_GUIDE_FLUTTER.md  INTEGRATION_GUIDE_REACT_NATIVE.md  README.md
docs/: ADMIN_TENANT_MANAGEMENT_GUIDE.md  AGILE_BACKLOG_PHASE_1.md  ARANSENTINEL_WAF_INTEGRATION_GUIDE.md  ARAN_OMNINET_INTEGRATION_MATRIX.md  Agile Backlog Document.md  DEMO_WAF_SETUP.md  END_TO_END_VERIFICATION.md  GTM & Compliance Document.md  GTM_AND_COMPLIANCE.md  IONIC_DASHBOARD_COMPLETE_GUIDE.md  IONIC_DASHBOARD_SETUP.md  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  README.md  TECHNICAL_ARCHITECTURE.md  (+3 more)
plugins/cordova_capacitor/cordova/src/android/: AranRASP.java  CMakeLists.txt
(+377 files in other folders)
